--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tinacms": "^2.8.2"
   },
   "devDependencies": {
+    "@tinacms/cli": "^1.10.2",
     "prettier": "^2.8.8"
   },
   "keywords": [
